<resources>
    <string name="app_name">Happy_Places</string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>

    <!--TODO(Step 5: We have added all the String values here which are used in designing an item for recyclerview.)-->
    <!--START-->
    <string name="note_text_no_happy_places_found_yet_kindly_add_one">No Happy Places Found Yet. Kindly add one.</string>
    <string name="image_content_description">image</string>
    <string name="YOUR_API_KEY">AIzaSyBbxvs3UpuJew8RE10c0drdUO96VN2j1W4</string>

    <!--END-->
</resources>